[package]
name = "oe"
version = "0.0.2"
authors = ["David Johnson <john01dav@gmail.com>"]
edition = "2018"
documentation = "https://docs.rs/oe"
description = "OE is a macro to make errors easy and expressive"
readme = "README.md"
homepage = "https://github.com/yuulive/oe"
license="MIT OR Apache-2.0"
keywords = ["error", "macro"]
categories = ["development-tools"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.7"
proc-macro2 = "1.0"
syn = "1.0.48"
Inflector = "0.11.4"
